--- a/css/style.css
+++ b/css/style.css
@@ -87,9 +87,10 @@ section {
     display: flex;
     align-items: center;
     padding: 0 9%;
-    background: url('/images/background.png') no-repeat;
+    background: url('/images/background.png');
     background-size: cover;
     background-position: center;
+    height: 100vh; 
 }
 
 .home-content {
