--- a/css/style.css
+++ b/css/style.css
@@ -87,7 +87,7 @@ section {
     display: flex;
     align-items: center;
     padding: 0 9%;
-    background-image: url('/images/background.png');
+    background-image: url('../images/background.png');
     background-size: cover;
     background-position: center;
     height: 100vh; 
