--- a/css/style.css
+++ b/css/style.css
@@ -323,6 +323,9 @@ section {
     margin-bottom: 3rem;
     text-align: center;
 }
+.faqtext h2 {
+    font-size: 24px;
+}   
 
 span {
     color: var(--main-color);
@@ -647,10 +650,13 @@ span {
 }
 
 .skills {
-    min-height: auto;
+    min-height :auto;
     padding-bottom: 7rem;
     background: var(--second-bg-color);
 }
+.Nadpis h2 {
+    font-size: 20rem; 
+}   
 
 .skills h2 {
     display: inline-block;
@@ -762,7 +768,7 @@ span {
 }
 
 .skills-column:nth-child(2) .skills-content .progress:nth-child(4) .bar span {
-    width: 85%;
+    width: 100%;
 }
 
 .contact {
